[package]
name = "crucible-hammer"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
crucible.workspace = true
crucible-common.workspace = true
rand.workspace = true
tokio.workspace = true
opentelemetry.workspace = true
opentelemetry-jaeger.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
uuid.workspace = true
crucible-workspace-hack = { version = "0.1", path = "../workspace-hack" }
