[package]
name = "crucible-integration-tests"
version = "0.1.0"
authors = ["Joshua M. Clulow <jmc@oxide.computer>", "Alan Hanson <alan@oxide.computer>", "James MacMahon <james@oxide.computer>"]
license = "MPL-2.0"
edition = "2018"

[dev-dependencies]
anyhow = "1"
bytes = "1"
crucible = { path = "../upstairs" }
crucible-downstairs = { path = "../downstairs" }
crucible-client-types = { path = "../crucible-client-types" }
futures = "0.3"
futures-core = "0.3"
httptest = "0.15.4"
base64 = "0.13"
rand = "0.8.5"
tempfile = "3.3.0"
tokio = { version = "1.21.2", features = ["full"] }
uuid = { version = "1.0.0", features = [ "serde", "v4" ] }
lazy_static = "1.4.0"
