[package]
name = "crucible-integration-tests"
version = "0.1.0"
authors = [
    "Joshua M. Clulow <jmc@oxide.computer>",
    "Alan Hanson <alan@oxide.computer>",
    "James MacMahon <james@oxide.computer>"
]
license = "MPL-2.0"
edition = "2018"

[dev-dependencies]
anyhow = "1"
bytes = "1"
crucible = { path = "../upstairs" }
# importantly, don't use features = ["zfs_snapshot"] here, this will cause
# cleanup issues!
crucible-downstairs = { path = "../downstairs" }
crucible-client-types = { path = "../crucible-client-types" }
crucible-pantry = { path = "../pantry" }
crucible-pantry-client = { path = "../pantry-client" }
futures = "0.3"
futures-core = "0.3"
httptest = "0.15.4"
base64 = "0.13"
rand = "0.8.5"
slog = "2.7"
slog-async = "2.7"
slog-dtrace = "0.2"
slog-term = "2.7"
tempfile = "3.3.0"
tokio = { version = "1.21.2", features = ["full"] }
uuid = { version = "1.2.2", features = [ "serde", "v4" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.89"
reqwest = { version = "0.11", features = ["json", "stream"] }
