[package]
name = "crucible-integration-tests"
version = "0.1.0"
authors = [
    "Joshua M. Clulow <jmc@oxide.computer>",
    "Alan Hanson <alan@oxide.computer>",
    "James MacMahon <james@oxide.computer>"
]
license = "MPL-2.0"
edition = "2021"

[dev-dependencies]
anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
crucible-client-types.workspace = true
# importantly, don't use features = ["zfs_snapshot"] here, this will cause
# cleanup issues!
crucible-downstairs.workspace = true
crucible-pantry-client.workspace = true
crucible-pantry.workspace = true
crucible.workspace = true
dropshot.workspace = true
futures-core.workspace = true
futures.workspace = true
hex.workspace = true
httptest.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
slog-async.workspace = true
slog-dtrace.workspace = true
slog-term.workspace = true
slog.workspace = true
tempfile.workspace = true
tokio.workspace = true
uuid.workspace = true

[dependencies]
crucible-workspace-hack.workspace = true
