[package]
name = "measure-iops"
version = "0.0.1"
license = "MPL-2.0"
edition = "2018"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "3.2", features = ["derive"] }
crucible = { path = "../upstairs" }
crucible-common = { path = "../common" }
rand = "0.8.5"
tokio = { version = "1.22.0", features = ["full"] }
statistical = "1.0.0"
uuid = "1"
