[package]
name = "measure-iops"
version = "0.0.1"
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4.1", features = ["derive"] }
crucible = { path = "../upstairs" }
crucible-common = { path = "../common" }
rand = "0.8.5"
tokio = { version = "1.24.1", features = ["full"] }
statistical = "1.0.0"
uuid = "1"
