[package]
name = "measure-iops"
version = "0.0.1"
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
crucible.workspace = true
crucible-common.workspace = true
rand.workspace = true
tokio.workspace = true
statistical.workspace = true
uuid.workspace = true
