[package]
name = "crucible-nbd-server"
version = "0.1.0"
authors = ["Joshua M. Clulow <jmc@oxide.computer>", "Alan Hanson <alan@oxide.computer>", "James MacMahon <james@oxide.computer>"]
edition = "2018"

[dependencies]
anyhow = "1"
bytes = "1"
crucible = { path = "../upstairs" }
crucible-common = { path = "../common" }
crucible-protocol = { path = "../protocol" }
crucible-scope = { path = "../scope" }
futures = "0.3"
futures-core = "0.3"
ringbuffer = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tokio = { version = "1.7.1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"]}
toml = "0.5"
nbd = "0.2.3"
rand = "0.8.4"
