[package]
name = "crucible-nbd-server"
version = "0.1.0"
authors = ["Joshua M. Clulow <jmc@oxide.computer>", "Alan Hanson <alan@oxide.computer>", "James MacMahon <james@oxide.computer>"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
crucible-common.workspace = true
crucible-protocol.workspace = true
crucible.workspace = true
futures-core.workspace = true
futures.workspace = true
nbd.workspace = true
ringbuffer.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
tokio.workspace = true
toml.workspace = true
crucible-workspace-hack = { version = "0.1", path = "../workspace-hack" }
