[package]
name = "pantest"
version = "0.1.0"
license = "MPL-2.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crucible-pantry-client.workspace = true
dsc-client.workspace = true
slog.workspace = true
tokio.workspace = true
uuid.workspace = true
crucible-common.workspace = true
crucible-workspace-hack.workspace = true
